<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_navigation"
    app:startDestination="@+id/nev_circle">

    <action
        android:id="@+id/to_settings"
        app:destination="@id/nev_settings"/>

    <fragment
        android:id="@+id/nev_circle"
        android:name="dev.lordyorden.as_no_phish_detector.ui.CircleFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_circle" >
        <action
            android:id="@+id/action_nev_circle_to_invite_fragment"
            app:destination="@id/invite_fragment" />
        <action
            android:id="@+id/action_nev_circle_to_circle_events"
            app:destination="@id/nev_profile" />
    </fragment>

    <fragment
        android:id="@+id/invite_fragment"
        android:name="dev.lordyorden.as_no_phish_detector.ui.InviteToCircleFragment"
        android:label="invite"
        tools:layout="@layout/fragment_invite_to_circle"/>

    <fragment
        android:id="@+id/nev_settings"
        android:name="dev.lordyorden.as_no_phish_detector.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
    </fragment>

    <fragment
        android:id="@+id/nev_history"
        android:name="dev.lordyorden.as_no_phish_detector.ui.AttackHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_attack_history" />

    <fragment
        android:id="@+id/nev_profile"
        android:name="dev.lordyorden.as_no_phish_detector.ui.CircleEventsFragment"
        android:label="@string/circle_events"
        tools:layout="@layout/fragment_circle_events" />
</navigation>
