<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nev_circle">

    <fragment
        android:id="@+id/nev_circle"
        android:name="dev.lordyorden.as_no_phish_detector.ui.CircleFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_circle" >
        <action
            android:id="@+id/action_nev_circle_to_invite_fragment"
            app:destination="@id/invite_fragment" />

    </fragment>

    <fragment
        android:id="@+id/invite_fragment"
        android:name="dev.lordyorden.as_no_phish_detector.ui.InviteToCircleFragment"
        android:label="invite"
        tools:layout="@layout/fragment_invite_to_circle"/>

    <fragment
        android:id="@+id/nev_settings"
        android:name="dev.lordyorden.as_no_phish_detector.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/settings_to_notif"
            app:destination="@id/nev_notification"
            app:popUpTo="@id/nev_settings"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nev_notification"
        android:name="dev.lordyorden.as_no_phish_detector.ui.JoinCircleFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_join_circle" />
</navigation>