<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="24dp"
        android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/enter_join_code"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/plus_jakarta_sans"
        android:lineSpacingExtra="4dp"
        android:ems="14"
        android:text="@string/enter_code"
        android:textSize="16sp" />

    <com.godwinaddy.otpinput.OtpInput
        android:id="@+id/otpInput"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:fontFamily="@font/noto_serif"
        android:textSize="12sp"
        app:inputType="number"
        android:textColor="@color/primary"
        app:inputBackground="@color/surface"
        app:inputCount="6"
        app:inputRadius="100dp"
        android:cursorVisible="false"
        app:inputSpacing="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary"
        android:text="@string/join_the_circle"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/plus_jakarta_sans"
        android:layout_marginTop="10dp"
        android:text="@string/dont_have_code"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="14sp"
        android:padding="8dp"/>

    <!-- Privacy Section -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        app:strokeWidth="0dp"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_circle_avatar_gray"
                android:padding="6dp"
                android:src="@drawable/ic_lock"
                app:tint="#1B4332" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/privacy_first"
                android:textColor="#1B4332"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/never_share"
                android:textSize="13sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <!-- Smart Alerts Section -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:strokeWidth="0dp"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_circle_avatar_gray"
                android:padding="6dp"
                android:src="@drawable/ic_notif"
                app:tint="#1B4332" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/smart_alerts"
                android:textColor="#1B4332"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/only_alerted"
                android:textSize="13sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>